--- a/app/backend/pkg/database/template2.html
+++ b/app/backend/pkg/database/template2.html
@@ -103,7 +103,7 @@
     <div
       style="
         flex-grow: 1;
-        padding: 1rem 3.5rem;
+        padding: 1rem 3.5rem 2rem 3.5rem;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
