--- a/app/backend/pkg/database/template1.html
+++ b/app/backend/pkg/database/template1.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <title>Chứng nhận</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Montserrat:wght@400;700&family=Great+Vibes&display=swap" rel="stylesheet">
+</head>
+<body style="margin:0;">
+
 <div style="display: flex; align-items: center; justify-content: center; min-height: 100vh; background-color: #e0e0e0; padding: 2rem; box-sizing: border-box;">
 
   <div
@@ -15,6 +25,7 @@
       color: #333333;
     "
   >
+    <!-- Khung viền trang trí -->
     <div
       style="
         position: absolute;
@@ -33,6 +44,7 @@
       <div style="position: absolute; bottom: -11px; right: -11px; width: 20px; height: 20px; border: 2px solid #a47b37; background: #fdfdfa;"></div>
     </div>
 
+    <!-- Watermark -->
     <div
       style="
         position: absolute;
@@ -50,6 +62,7 @@
       </svg>
     </div>
 
+    <!-- Nội dung chính -->
     <div
       style="
         position: relative;
@@ -82,7 +95,11 @@
             {{ .HoTen }}
           </h2>
           <p style="font-size: 1.2rem; line-height: 1.8; margin: 0.5rem auto; max-width: 85%;">
-            Sinh ngày: <span style="font-weight: 700; font-style: italic;">{{ .NgaySinh }}</span>. Đã hoàn thành chương trình đào tạo <span style="font-weight: 700; font-style: italic;">{{ .HinhThucDaoTao }}</span>, ngành <span style="font-weight: 700; font-style: italic;">{{ .Nganh }}</span>, khóa học <span style="font-weight: 700; font-style: italic;">{{ .Khoa }}</span>. Xếp loại tốt nghiệp: <span style="font-weight: 700; font-style: italic;">{{ .XepLoai }}</span>.
+            Sinh ngày: <span style="font-weight: 700; font-style: italic;">{{ .NgaySinh }}</span>. 
+            Đã hoàn thành chương trình đào tạo <span style="font-weight: 700; font-style: italic;">{{ .HinhThucDaoTao }}</span>, 
+            ngành <span style="font-weight: 700; font-style: italic;">{{ .Nganh }}</span>, 
+            khóa học <span style="font-weight: 700; font-style: italic;">{{ .Khoa }}</span>. 
+            Xếp loại tốt nghiệp: <span style="font-weight: 700; font-style: italic;">{{ .XepLoai }}</span>.
           </p>
         </div>
 
@@ -104,3 +121,5 @@
   </div>
 
 </div>
+</body>
+</html>
